# storagy-practice-ws-docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
docker/: rebuild_ws.sh  run_sim.sh  welcome.sh
src/storagy/: CMakeLists.txt  package.xml
src/storagy/config/cartographer/: mobile_2d.lua
src/storagy/launch/: mapping.launch.py  navigation.launch.py  robot_state_publisher.launch.py  rviz.launch.py  sim.launch.py
src/storagy/param/: nav2_params.yaml
src/storagy/rviz/: storagy.rviz
src/storagy/urdf/: storagy.urdf
src/storagy/worlds/: warehouse.sdf
