<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>storagy</name>
  <version>1.0.0</version>
  <description>
    Storagy 실습용 워크스페이스 - Gazebo(warehouse) 시뮬레이션에서 Cartographer 로
    지도를 만들고, 그 지도로 Nav2 자율주행을 실습하는 초보자용 최소 패키지.
  </description>
  <maintainer email="bluephysi01@gmail.com">bluephysi01</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 시뮬레이션 + 로봇 모델 -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- 매핑(SLAM) -->
  <exec_depend>cartographer_ros</exec_depend>

  <!-- 자율주행 -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <!-- 시각화 / 수동 조작 -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
